--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+codegen-units = 1
+
+[profile.bench]
+debug = true
+lto = true
+codegen-units = 1
+
 [dependencies]
+actix-web = { version = "3.3", features = ["rustls"] }
