--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,11 @@ lto = true
 codegen-units = 1
 
 [dependencies]
-actix-web = { version = "3.3", features = ["rustls"] }
+actix-web = "4.0.0-beta.16"
+anyhow = "1"
 async_once = "0.2.1"
 futures = "0.3.19"
 lazy_static = "1.4.0"
-mongodb = "1.2.5"
+mongodb = "2.1"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
