--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,11 @@ lto = true
 codegen-units = 1
 
 [dependencies]
-actix-web = "4.0.0-rc.2"
-anyhow = "1"
-async_once = "0.2.1"
-futures = "0.3.19"
+actix-web = "4.0.1"
+async_once = "0.2.6"
+futures = "0.3.21"
 lazy_static = "1.4.0"
-mongodb = "2.1"
+mongodb = "2.2.1"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 bio = "0.39.1"
